# Atomical

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  FurlangC.sln  Makefile  cmake_clean.sh  cmake_install.cmake  gen_coverage.sh  readme.md  runTests  test.sh  watch_test.sh
FurLib/: FurLib.vcxproj  FurLib.vcxproj.filters  ReadMe.txt
FurlangC/: FurlangC.vcxproj  FurlangC.vcxproj.filters  ast.c  ast.h  fur.h  irgen.c  lex.c  lex.h  lexer.c  lexer.h  main.c  packages.config  parser.c  parser.h
FurlangCTest/: FurlangCTest.vcxproj  FurlangCTest.vcxproj.filters  LexerTest.cpp  ParserTest.cpp  stdafx.cpp  unittest1.cpp
doc/: all.md  analysis.md  doc.md  doc_gen.md  documented_design.md  evaluation.md  gen.py  technical_solution.md  testing.md
doc/src/: doc.md
src/: ast.c  ast.cpp  ast.h  error.c  ir.cpp  ir.h  ir.txt  irgen.c  irgen.cpp  irgen.h  lex_test.c  lexer.c  lexer.cpp  lib.c  lib.cpp  main.c  parser.c  parser.cpp  parser.h  pool.c  queue.c  ssa.c  string.c  token.cpp  token.h  type.cpp  type.h
src/includes/: all.h  ast.h  error.h  irgen.h  lexer.h  parser.h  pool.h  queue.h  ssa.h  string.h  uthash.h
tests/: LexerTest.cpp  ParserTest.cpp  ast_test.cpp  doctest.h  integration_test.cpp  irgen_test.cpp  lexer_test.cpp  parser_test.cpp  pool_test.cpp  queue_test.cpp  ssa_test.cpp  string_test.cpp  test.cpp
tests/acl/: add.acl  arrayInit.acl  arraySum.acl  binaryFloat.acl  binaryInt.acl  block.acl  for.acl  gcd.acl  globalValueNumbering.acl  nestedFor.acl  reassignArg.acl  varEqualError.acl  varValueError.acl
tests/ir/: add.ir  binaryFloat.ir  (+12 more)
(+50 files in other folders)
